minor change to about

--- a/public/about-hugo/index.html
+++ b/public/about-hugo/index.html
@@ -8,22 +8,22 @@
 	<meta name="theme-color" content="#494f5c">
 	<meta name="msapplication-TileColor" content="#494f5c">
 <meta itemprop="name" content="About">
-<meta itemprop="description" content="Hi! My name&rsquo;s Faizaan (Fazi in short). I have recently completed an MSc in Finance and a BSc in Actuarial Science from the UK, and have a strong interest in data science. This website serves as my personal portfolio of data analysis project.
+<meta itemprop="description" content="Hi! My name&rsquo;s Faizaan (Fazi in short). I have recently completed an MSc in Finance and a BSc in Actuarial Science from the UK, and have a strong interest in data science and analysis. This website serves as my personal portfolio of data analysis project.
 Each project workflow comprises of data cleaning, exploratory data analysis, and applying various predictive (machine learning) models. The projects range across a variety of topics and data types, including regression, classification and time series analysis.">
 
-<meta itemprop="wordCount" content="165">
+<meta itemprop="wordCount" content="167">
 
 
 
 <meta itemprop="keywords" content="" /><meta property="og:title" content="About" />
-<meta property="og:description" content="Hi! My name&rsquo;s Faizaan (Fazi in short). I have recently completed an MSc in Finance and a BSc in Actuarial Science from the UK, and have a strong interest in data science. This website serves as my personal portfolio of data analysis project.
+<meta property="og:description" content="Hi! My name&rsquo;s Faizaan (Fazi in short). I have recently completed an MSc in Finance and a BSc in Actuarial Science from the UK, and have a strong interest in data science and analysis. This website serves as my personal portfolio of data analysis project.
 Each project workflow comprises of data cleaning, exploratory data analysis, and applying various predictive (machine learning) models. The projects range across a variety of topics and data types, including regression, classification and time series analysis." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/about-hugo/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="About"/>
-<meta name="twitter:description" content="Hi! My name&rsquo;s Faizaan (Fazi in short). I have recently completed an MSc in Finance and a BSc in Actuarial Science from the UK, and have a strong interest in data science. This website serves as my personal portfolio of data analysis project.
+<meta name="twitter:description" content="Hi! My name&rsquo;s Faizaan (Fazi in short). I have recently completed an MSc in Finance and a BSc in Actuarial Science from the UK, and have a strong interest in data science and analysis. This website serves as my personal portfolio of data analysis project.
 Each project workflow comprises of data cleaning, exploratory data analysis, and applying various predictive (machine learning) models. The projects range across a variety of topics and data types, including regression, classification and time series analysis."/>
 
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -69,7 +69,7 @@ Each project workflow comprises of data cleaning, exploratory data analysis, and
 	<main class="site-main section-inner thin animated fadeIn faster">
 		<h1>About</h1>
 		<div class="content">
-			<p>Hi! My name&rsquo;s Faizaan (Fazi in short). I have recently completed an MSc in Finance and a BSc in Actuarial Science from the UK, and have a strong interest in data science. This website serves as my personal portfolio of data analysis project.</p>
+			<p>Hi! My name&rsquo;s Faizaan (Fazi in short). I have recently completed an MSc in Finance and a BSc in Actuarial Science from the UK, and have a strong interest in data science and analysis. This website serves as my personal portfolio of data analysis project.</p>
 <p>Each project workflow comprises of data cleaning, exploratory data analysis, and applying various predictive (machine learning) models. The projects range across a variety of topics and data types, including regression, classification and time series analysis. Along with the complete code, a written analysis is also included within each project, acting as a narrative through each step of the process. Majority of the projects are completed within R. This is more of a personal preference (not to say I have anything against Python). I have ultimately tried to complete each project by avoiding unnecessary complexity while remaining as simple as possible.</p>
 <p>Do feel free to contact me if you want to reach out at <a href="mailto:faizaan.shahid@gmail.com">faizaan.shahid@gmail.com</a>, or through the mailto button provided :) .</p>
 
