another minor change to about

--- a/public/about-hugo/index.html
+++ b/public/about-hugo/index.html
@@ -11,7 +11,7 @@
 <meta itemprop="description" content="My name is Faizaan Shahid (Fazi). I have completed an MSc in Finance and a BSc in Actuarial Science from the UK, and have a strong interest in data science and analysis. This website serves as my personal portfolio of data analysis projects.
 Each project workflow comprises of data cleaning, exploratory data analysis, and applying various predictive (machine learning) models. The projects range across a variety of topics and data types, including regression, classification and time series analysis.">
 
-<meta itemprop="wordCount" content="186">
+<meta itemprop="wordCount" content="188">
 
 
 
@@ -72,7 +72,7 @@ Each project workflow comprises of data cleaning, exploratory data analysis, and
 			<p>My name is Faizaan Shahid (Fazi). I have completed an MSc in Finance and a BSc in Actuarial Science from the UK, and have a strong interest in data science and analysis. This website serves as my personal portfolio of data analysis projects.</p>
 <p>Each project workflow comprises of data cleaning, exploratory data analysis, and applying various predictive (machine learning) models. The projects range across a variety of topics and data types, including regression, classification and time series analysis. Along with the complete code, a written analysis is also included within each project, acting as a narrative through each step of the process.</p>
 <p>Majority of the projects are completed within R. This is more of a personal preference, as I find R to be more streamlined especially for data processing and exploring. However, I also find Python to be quite useful for certain aspects such as deep learning.</p>
-<p>Ultimately, it has been my goal to showcase the capability of data analytics as simply as possible, using my own ideas and inspiration from other published code.</p>
+<p>Ultimately, it has been my goal to showcase the capability and value of data analytics as simply as possible, using my own ideas and inspiration from other published code.</p>
 <p>I can be contacted at <a href="mailto:faizaan.shahid@gmail.com">faizaan.shahid@gmail.com</a>, or through the mailto button provided.</p>
 
 		</div>
