--- a/public/about-hugo/index.html
+++ b/public/about-hugo/index.html
@@ -8,23 +8,23 @@
 	<meta name="theme-color" content="#494f5c">
 	<meta name="msapplication-TileColor" content="#494f5c">
 <meta itemprop="name" content="About">
-<meta itemprop="description" content="My name is Faizaan (Fazi) Shahid. I have completed an MSc in Finance and Management and a BSc in Actuarial Science from the UK, and have a strong interest in data science and analysis. This website serves as my personal portfolio of data analysis projects.
-Each project workflow comprises of data cleaning, exploratory data analysis, and applying various predictive (machine learning) models. The projects range across a variety of topics and data types, including regression, classification and time series analysis.">
+<meta itemprop="description" content="My name is Faizaan (Fazi) Shahid. I have completed an MSc in Finance and Management and a BSc in Actuarial Science from the UK, and have a strong interest in data science and analytics. This website serves as my personal portfolio of data analysis projects, composed from my own ideas and inspiration from other published code.
+Each project workflow comprises of data cleaning, exploratory data analysis, and applying various predictive (machine learning) models.">
 
-<meta itemprop="wordCount" content="190">
+<meta itemprop="wordCount" content="172">
 
 
 
 <meta itemprop="keywords" content="" /><meta property="og:title" content="About" />
-<meta property="og:description" content="My name is Faizaan (Fazi) Shahid. I have completed an MSc in Finance and Management and a BSc in Actuarial Science from the UK, and have a strong interest in data science and analysis. This website serves as my personal portfolio of data analysis projects.
-Each project workflow comprises of data cleaning, exploratory data analysis, and applying various predictive (machine learning) models. The projects range across a variety of topics and data types, including regression, classification and time series analysis." />
+<meta property="og:description" content="My name is Faizaan (Fazi) Shahid. I have completed an MSc in Finance and Management and a BSc in Actuarial Science from the UK, and have a strong interest in data science and analytics. This website serves as my personal portfolio of data analysis projects, composed from my own ideas and inspiration from other published code.
+Each project workflow comprises of data cleaning, exploratory data analysis, and applying various predictive (machine learning) models." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/about-hugo/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="About"/>
-<meta name="twitter:description" content="My name is Faizaan (Fazi) Shahid. I have completed an MSc in Finance and Management and a BSc in Actuarial Science from the UK, and have a strong interest in data science and analysis. This website serves as my personal portfolio of data analysis projects.
-Each project workflow comprises of data cleaning, exploratory data analysis, and applying various predictive (machine learning) models. The projects range across a variety of topics and data types, including regression, classification and time series analysis."/>
+<meta name="twitter:description" content="My name is Faizaan (Fazi) Shahid. I have completed an MSc in Finance and Management and a BSc in Actuarial Science from the UK, and have a strong interest in data science and analytics. This website serves as my personal portfolio of data analysis projects, composed from my own ideas and inspiration from other published code.
+Each project workflow comprises of data cleaning, exploratory data analysis, and applying various predictive (machine learning) models."/>
 
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -69,10 +69,9 @@ Each project workflow comprises of data cleaning, exploratory data analysis, and
 	<main class="site-main section-inner thin animated fadeIn faster">
 		<h1>About</h1>
 		<div class="content">
-			<p>My name is Faizaan (Fazi) Shahid. I have completed an MSc in Finance and Management and a BSc in Actuarial Science from the UK, and have a strong interest in data science and analysis. This website serves as my personal portfolio of data analysis projects.</p>
+			<p>My name is Faizaan (Fazi) Shahid. I have completed an MSc in Finance and Management and a BSc in Actuarial Science from the UK, and have a strong interest in data science and analytics. This website serves as my personal portfolio of data analysis projects, composed from my own ideas and inspiration from other published code.</p>
 <p>Each project workflow comprises of data cleaning, exploratory data analysis, and applying various predictive (machine learning) models. The projects range across a variety of topics and data types, including regression, classification and time series analysis. Along with the complete code, a written analysis is also included within each project, acting as a narrative through each step of the process.</p>
 <p>Majority of the projects are completed within R. This is more of a personal preference, as I find R to be more streamlined especially for data processing and exploring. However, I also find Python to be quite useful for certain aspects such as deep learning.</p>
-<p>Ultimately, it has been my goal to showcase the capability and value of data analytics as simply as possible, using my own ideas and inspiration from other published code.</p>
 <p>I can be contacted at <a href="mailto:faizaan.shahid@gmail.com">faizaan.shahid@gmail.com</a>, or through the mailto button provided.</p>
 
 		</div>
