--- a/public/about-hugo/index.html
+++ b/public/about-hugo/index.html
@@ -8,22 +8,22 @@
 	<meta name="theme-color" content="#494f5c">
 	<meta name="msapplication-TileColor" content="#494f5c">
 <meta itemprop="name" content="About">
-<meta itemprop="description" content="My name is Faizaan (Fazi) Shahid. I have completed an MSc in Finance and Management and a BSc in Actuarial Science from the UK, and have a strong interest in data science and analytics. This website serves as my personal portfolio of data analysis projects, composed from my own ideas and inspiration from other published open-source code.
+<meta itemprop="description" content="My name is Faizaan (Fazi) Shahid, and I have a strong interest in data science and analytics. I have completed an MSc in Finance and Management and a BSc in Actuarial Science. I have also passed the Google Cloud Certified Professional Data Engineer exam. This website serves as my personal portfolio of data analysis projects, composed from my own ideas and inspiration from other published open-source code.
 Each project workflow comprises of data cleaning, exploratory data analysis, and applying various predictive (machine learning) models.">
 
-<meta itemprop="wordCount" content="173">
+<meta itemprop="wordCount" content="183">
 
 
 
 <meta itemprop="keywords" content="" /><meta property="og:title" content="About" />
-<meta property="og:description" content="My name is Faizaan (Fazi) Shahid. I have completed an MSc in Finance and Management and a BSc in Actuarial Science from the UK, and have a strong interest in data science and analytics. This website serves as my personal portfolio of data analysis projects, composed from my own ideas and inspiration from other published open-source code.
+<meta property="og:description" content="My name is Faizaan (Fazi) Shahid, and I have a strong interest in data science and analytics. I have completed an MSc in Finance and Management and a BSc in Actuarial Science. I have also passed the Google Cloud Certified Professional Data Engineer exam. This website serves as my personal portfolio of data analysis projects, composed from my own ideas and inspiration from other published open-source code.
 Each project workflow comprises of data cleaning, exploratory data analysis, and applying various predictive (machine learning) models." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/about-hugo/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="About"/>
-<meta name="twitter:description" content="My name is Faizaan (Fazi) Shahid. I have completed an MSc in Finance and Management and a BSc in Actuarial Science from the UK, and have a strong interest in data science and analytics. This website serves as my personal portfolio of data analysis projects, composed from my own ideas and inspiration from other published open-source code.
+<meta name="twitter:description" content="My name is Faizaan (Fazi) Shahid, and I have a strong interest in data science and analytics. I have completed an MSc in Finance and Management and a BSc in Actuarial Science. I have also passed the Google Cloud Certified Professional Data Engineer exam. This website serves as my personal portfolio of data analysis projects, composed from my own ideas and inspiration from other published open-source code.
 Each project workflow comprises of data cleaning, exploratory data analysis, and applying various predictive (machine learning) models."/>
 
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -69,7 +69,7 @@ Each project workflow comprises of data cleaning, exploratory data analysis, and
 	<main class="site-main section-inner thin animated fadeIn faster">
 		<h1>About</h1>
 		<div class="content">
-			<p>My name is Faizaan (Fazi) Shahid. I have completed an MSc in Finance and Management and a BSc in Actuarial Science from the UK, and have a strong interest in data science and analytics. This website serves as my personal portfolio of data analysis projects, composed from my own ideas and inspiration from other published open-source code.</p>
+			<p>My name is Faizaan (Fazi) Shahid, and I have a strong interest in data science and analytics. I have completed an MSc in Finance and Management and a BSc in Actuarial Science. I have also passed the Google Cloud Certified Professional Data Engineer exam. This website serves as my personal portfolio of data analysis projects, composed from my own ideas and inspiration from other published open-source code.</p>
 <p>Each project workflow comprises of data cleaning, exploratory data analysis, and applying various predictive (machine learning) models. The projects range across a variety of topics and data types, including regression, classification and time series analysis. Along with the complete code, a written analysis is also included within each project, acting as a narrative through each step of the process.</p>
 <p>Majority of the projects are completed within R. This is more of a personal preference, as I find R to be more streamlined especially for data processing and exploring. However, I also find Python to be quite useful for certain aspects such as deep learning.</p>
 <p>I can be contacted at <a href="mailto:faizaan.shahid@gmail.com">faizaan.shahid@gmail.com</a>, or through the mailto button provided.</p>
